fix z-index

--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -12,7 +12,7 @@
 	opacity: 0;
 
 	@include md {
-		padding-top: 200px;
+		padding-top: 100px;
 		transform: translateY(100px);
 		animation-delay: 4s;
 		&:hover:not(.Footer--show) {
