--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -3,12 +3,13 @@
 @import '../../styles/animations';
 
 .header {
-	padding: 34px 15px;
+	padding: 25px 15px;
 	display: flex;
 	justify-content: space-between;
 	position: absolute;
 	left: 0;
 	right: 0;
+	z-index: 1;
 
 	@include sm {
 		padding: 34px 43px;
