--- a/src/components/Home/Home.scss
+++ b/src/components/Home/Home.scss
@@ -10,7 +10,6 @@
 	height: 100%;
 	box-sizing: border-box;
 	padding: 0 15px;
-	z-index: -1;
 
 	@include lg {
 		margin: 0 auto;
